# turing_test_frontend

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
static/: index.html  index0.html  init.js  results.html  script.js  styles.css
