[tool.poetry]
name = "turing-syntheva"
version = "0.1.0"
description = ""
authors = ["Marc Molina <marcmolinavdb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.111.1"
matplotlib = "^3.9.1.post1"
azure-storage-blob = "^12.22.0"
azure-identity = "^1.17.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
